Closed
Bug 377181
Opened 18 years ago
Closed 17 years ago
"Jump to here" preference isn't followed by non-native scrollbars
Categories
(Core :: XUL, defect, P4)
Tracking
()
RESOLVED
FIXED
People
(Reporter: asaf, Assigned: stanshebs)
References
()
Details
(Keywords: platform-parity, regression, Whiteboard: [dbaron-1.9:RuCo])
Attachments
(1 file, 1 obsolete file)
7.13 KB,
patch
|
Details | Diff | Splinter Review |
The "Click in scrollbar to: Jump to here" preference is not followed by non-native scrollbars. We should fix this now that native scrollbars are gone.
Flags: blocking1.9?
Reporter | ||
Comment 1•18 years ago
|
||
Attachment #261286 -
Flags: superreview?(roc)
Attachment #261286 -
Flags: review?(cbarrett)
Reporter | ||
Comment 2•18 years ago
|
||
Note that nsXPLookAndFeel has some caching support so this is not as live as you might have thought.
Attachment #261286 -
Flags: superreview?(roc) → superreview+
Comment 3•18 years ago
|
||
Comment on attachment 261286 [details] [diff] [review]
patch
>+ { "ui.scrollToClick",
>+ eMetric_AlertNotificationOrigin, PR_FALSE, nsLookAndFeelTypeInt, 0 },
Shouldn't that be:
>+ { "ui.scrollToClick",
>+ eMetric_ScrollToClick, PR_FALSE, nsLookAndFeelTypeInt, 0 },
? Otherwise, looks good.
Attachment #261286 -
Flags: review?(cbarrett) → review+
Reporter | ||
Comment 4•18 years ago
|
||
*Oops*, yeah, thanks.
Reporter | ||
Comment 5•18 years ago
|
||
Attachment #261286 -
Attachment is obsolete: true
Reporter | ||
Comment 6•18 years ago
|
||
mozilla/widget/public/nsILookAndFeel.h 1.60
mozilla/widget/src/cocoa/nsLookAndFeel.mm 1.9
mozilla/widget/src/xpwidgets/nsXPLookAndFeel.cpp 1.53
mozilla/layout/xul/base/src/nsSliderFrame.cpp 1.161
mozilla/modules/libpref/src/init/all.js 3.669
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Priority: -- → P2
Resolution: --- → FIXED
Reopening per the dupe.
I can confirm in both my CmTrunk build from last night and GPA4 (from 27 Apr, which should have this patch) that this is still broken.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Reporter | ||
Comment 9•18 years ago
|
||
STR? Note you have to restart Fx/Cm to get it to read the updated system pref.
Comment 10•18 years ago
|
||
yes. the system pref had always been that anyway. changing it to "jump one page" then changing it back to "jump to here" (with camino not even open during the process) results in no effect.
...or am i missing something?
(Actually, native scrollbars didn't require a restart between changes, but that's irrelevant.)
STR:
1. Switch to "Scroll to here"
2. Launch CmTunk/Minefield/GPA4
3. Load a long page, like http://www.caminobrowser.org/releases/1.0-complete.php
4. Click near the bottom of the scroll well
Expected: Scroll to the bottom of the page
Actual: Scroll down one page
I can repro this with fresh profiles created after changing the system pref in both CmTrunk and GranParadiso A4.
Comment 12•18 years ago
|
||
I can also reproduce using Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a5pre) Gecko/20070508 Minefield/3.0a5pre
Flags: blocking1.9? → blocking1.9+
I filed bug 389775 on the fact changes aren't/won't be live.
Whiteboard: [dbaron-1.9:RuCo]
Target Milestone: mozilla1.9alpha4 → ---
Priority: P2 → P4
Comment 16•18 years ago
|
||
When the submitted diff will be live? :)
I don't know how this works exacly, but since I've seen the priority changed from P2 to P4 instead of seeing it checked in, and since I don't know exacly how this works, I'd like to know what's missing to see this fix applied. :)
The patch was checked in, but apparently, it doesn't work so the bug is still not fixed. We need someone (Asaf?) to debug this and post a new patch. Maybe Michael can figure it out.
This bug (and bug 389775) is fixed in my trunk build and the Minefield I have on hand:
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008021804 Minefield/3.0b4pre
Based on the range in my CmTrunks, it looks like shebs's work in bug 410112 got these working. :)
Status: REOPENED → RESOLVED
Closed: 18 years ago → 17 years ago
Resolution: --- → FIXED
Reporter | ||
Updated•17 years ago
|
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Reporter | ||
Updated•17 years ago
|
Assignee: mano → stanshebs
Status: REOPENED → NEW
Reporter | ||
Updated•17 years ago
|
Status: NEW → RESOLVED
Closed: 17 years ago → 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•