Bug 377181 - 'Jump to here' system preference is not followed by (new) non-native scrollbars. r-cbarrett, sr=roc.